test before iteration 2

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         </a>
       </section>
 
-      <section class="footer">
+      <footer class="footer">
         <nav class="footer__nav">
           <ul class="footer__list">
             <li class="footer__list-item">
@@ -362,7 +362,7 @@
           </ul>
         </nav>
         <p class="footer__author">&copy; 2022. Александр Федотов</p>
-      </section>
+      </footer>
     </main>
   </body>
 </html>
