the 3rd iteration

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -239,7 +239,7 @@
         </article>
 
         <article class="place">
-          <h2 class="place__title">Зимний Байкал</h2>
+          <h2 class="nowrap place__title">Зимний Байкал</h2>
           <div class="place__site">
             <h3 class="place__link-header" lang="en">URL</h3>
             <a
@@ -308,14 +308,14 @@
           href="https://stampsy.com/na-elektrichkakh-do-baikala"
           target="_blank"
         >
-          <h2 class="cover__title">До Байкала «на собаках»</h2>
+          <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
           <p class="cover__subtitle">
             По мотивам учебной темы о Транссибе — путешествие от столицы до
             Байкала на электричках.
           </p>
         </a>
       </section>
-
+    </main>
       <footer class="footer">
         <nav class="footer__nav">
           <ul class="footer__list">
@@ -363,6 +363,5 @@
         </nav>
         <p class="footer__author">&copy; 2022. Александр Федотов</p>
       </footer>
-    </main>
   </body>
 </html>
